--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
                 <li> <img scr="assets/cart icon.png">Cart</li>
             </ul>
         </nav>
-        </header>
+    </header>
+
+    <div class="banner">
+        <h1>ALWAYS FRESH <br> FLOWER</h1>
+        <p>Indulge your senses with the beauty and fragrance of
+            our fresh flower shop. From classic roses to exotic
+            blooms, we offer a wide variety of fresh flowers that
+            are perfect for any occasion. 
+        </p>
+        <img src="/assets/hero-flower.png">
+    </div>  
 </body>
 </html>
