header banner basic css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div><img src="assets/logo.png"></div>
         <nav>
-            <ul>
+            <ul class="navbar">
                 <li>Home</li>
                 <li>Shop</li>
                 <li>About Us</li>
@@ -20,13 +20,16 @@
     </header>
 
     <div class="banner">
-        <h1>ALWAYS FRESH <br> FLOWER</h1>
+        <div>
+        <h1>ALWAYS <span>FRESH FLOWER</span></h1>
         <p>Indulge your senses with the beauty and fragrance of
             our fresh flower shop. From classic roses to exotic
             blooms, we offer a wide variety of fresh flowers that
             are perfect for any occasion. 
+        </div>
         </p>
         <img src="/assets/hero-flower.png">
+
     </div>  
 </body>
 </html>
