product section basic html css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,61 @@
         </div>
         </p>
         <img src="/assets/hero-flower.png">
-
     </div>  
+    <section>
+        <h1><span>Our</span> Plants</h1>
+        <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From
+            classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        <div class="card">
+            <div>
+            <img src="/assets/sample-flower-image.png">
+            <p>Lily Blossom</p>
+            <p><strong>20 USD</strong></p>
+            <button class="cart-btn">ADD TO CART</button>
+            </div>
+            <div>
+            <img src="/assets/sample-flower-image.png">
+            <p>Lily Blossom</p>
+            <p><strong>20 USD</strong></p>
+            <button class="cart-btn">ADD TO CART</button>
+            </div>
+            <div>
+            <img src="/assets/sample-flower-image.png">
+            <p>Lily Blossom</p>
+            <p><strong>20 USD</strong></p>
+            <button class="cart-btn">ADD TO CART</button>
+            </div>
+            <div>
+            <img src="/assets/sample-flower-image.png">
+            <p>Lily Blossom</p>
+            <p><strong>20 USD</strong></p>
+            <button class="cart-btn">ADD TO CART</button>
+            </div>
+            <div>
+            <img src="/assets/sample-flower-image.png">
+            <p>Lily Blossom</p>
+            <p><strong>20 USD</strong></p>
+            <button class="cart-btn">ADD TO CART</button>
+            </div>
+            <div>
+            <img src="/assets/sample-flower-image.png">
+            <p>Lily Blossom</p>
+            <p><strong>20 USD</strong></p>
+            <button class="cart-btn">ADD TO CART</button>
+            </div>
+            <div>
+            <img src="/assets/sample-flower-image.png">
+            <p>Lily Blossom</p>
+            <p><strong>20 USD</strong></p>
+            <button class="cart-btn">ADD TO CART</button>
+            </div>
+            <div>
+            <img src="/assets/sample-flower-image.png">
+            <p>Lily Blossom</p>
+            <p><strong>20 USD</strong></p>
+            <button class="cart-btn">ADD TO CART</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
