--- a/index.html
+++ b/index.html
@@ -35,49 +35,49 @@
         <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From
             classic roses to exotic blooms, we offer a wide variety of fresh.</p>
         <div class="card">
-            <div>
+            <div class="items">
             <img src="/assets/sample-flower-image.png">
             <p>Lily Blossom</p>
             <p><strong>20 USD</strong></p>
             <button class="cart-btn">ADD TO CART</button>
             </div>
-            <div>
+            <div class="items">
             <img src="/assets/sample-flower-image.png">
             <p>Lily Blossom</p>
             <p><strong>20 USD</strong></p>
             <button class="cart-btn">ADD TO CART</button>
             </div>
-            <div>
+            <div class="items">
             <img src="/assets/sample-flower-image.png">
             <p>Lily Blossom</p>
             <p><strong>20 USD</strong></p>
             <button class="cart-btn">ADD TO CART</button>
             </div>
-            <div>
+            <div class="items">
             <img src="/assets/sample-flower-image.png">
             <p>Lily Blossom</p>
             <p><strong>20 USD</strong></p>
             <button class="cart-btn">ADD TO CART</button>
             </div>
-            <div>
+            <div class="items">
             <img src="/assets/sample-flower-image.png">
             <p>Lily Blossom</p>
             <p><strong>20 USD</strong></p>
             <button class="cart-btn">ADD TO CART</button>
             </div>
-            <div>
+            <div class="items">
             <img src="/assets/sample-flower-image.png">
             <p>Lily Blossom</p>
             <p><strong>20 USD</strong></p>
             <button class="cart-btn">ADD TO CART</button>
             </div>
-            <div>
+            <div class="items">
             <img src="/assets/sample-flower-image.png">
             <p>Lily Blossom</p>
             <p><strong>20 USD</strong></p>
             <button class="cart-btn">ADD TO CART</button>
             </div>
-            <div>
+            <div class="items">
             <img src="/assets/sample-flower-image.png">
             <p>Lily Blossom</p>
             <p><strong>20 USD</strong></p>
