--- a/index.html
+++ b/index.html
@@ -85,5 +85,27 @@
             </div>
         </div>
     </section>
+    <section class="flwr-plnt">
+        <div class="flwr-plnt-img">
+            <img src="/assets/flower-store.png">
+        </div>
+        <div class="flwr-plnt-text">
+            <h1>Flower & Plants Lover</h1>
+            <ul>
+                <li>Indulge your senses with the beauty and
+                    fragrance of our fresh flower shop. From classic
+                    roses to exotic blooms, we offer a wide variety
+                    of fresh.</li>
+                <li>Indulge your senses with the beauty and
+                    fragrance of our fresh flower shop. From classic
+                    roses to exotic blooms, we offer a wide variety
+                    of fresh.</li>
+                <li>Indulge your senses with the beauty and
+                    fragrance of our fresh flower shop. From classic
+                    roses to exotic blooms, we offer a wide variety
+                    of fresh.</li>   
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
