latest deals section html and flex layout css

--- a/index.html
+++ b/index.html
@@ -107,5 +107,30 @@
             </ul>
         </div>
     </section>
+    <section>
+        <div class="latest-deals">
+            <h1><span>Latest</span>Deals</h1>
+            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From
+                classic roses to exotic blooms, we offer a wide variety of fresh</p>
+        </div>
+        <div class="deals">
+            <div class="2-deals">
+                <div>
+                    <h5>60% Off | Bloom Plant</h5>
+                    <p><u>shop now</u></p>
+                </div>
+                <div>
+                    <h5>30% Off | Ana Plant</h5>
+                    <p><u>shop now</u></p>
+                </div>
+            </div>
+            <div>
+                 <div class="1-deals">
+                <h5>25% Off | Zabo Plant</h5>
+                <p><u>shop now</u></p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
