join and footer section raw html

--- a/index.html
+++ b/index.html
@@ -132,5 +132,43 @@
             </div>
         </div>
     </section>
+    <section class="join">
+        <h1>Join the colorful Bunch </h1>
+        <input type="email" placeholder="Write email">
+        <button class="subs-btn">Subscribe</button>
+    </section>
+    <section class="footer">
+        <div>
+            <img src="/assets/logo.png" alt="">
+            <p>Indulge your senses with the
+                beauty and fragrance of our fresh
+                flower shop. </p>
+        </div>
+        <div>
+            <ul>
+                <li>Home</li>
+                <li>About us</li>
+                <li>Blog</li>
+                <li>FAQ</li>
+                <li>Contact Us</li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li>Features</li>
+                <li>Pricing</li>
+                <li>Privacy Policy</li>
+                <li>Terms of Service</li>
+                <li>Help Center</li>
+            </ul>
+        </div>
+        <div>
+            <img src="assets/icon-facebook.png" alt="">
+            <img src="assets/icon-twitter.png" alt="">
+            <img src="assets/icon-facebook.png" alt="">
+            <img src="assets/icon-youtube.png" alt="">
+        </div>
+    </section>
+
 </body>
 </html>
