--- a/index.html
+++ b/index.html
@@ -14,26 +14,25 @@
                 <li>Home</li>
                 <li>Shop</li>
                 <li>About Us</li>
-                <li> <img scr="assets/cart icon.png">Cart</li>
+                <li> <img class="cart" src="assets/cart.png">Cart($56)</li>
             </ul>
         </nav>
     </header>
 
     <div class="banner">
         <div>
-        <h1>ALWAYS <span>FRESH FLOWER</span></h1>
+        <h1>ALWAYS <span>FRESH <br>FLOWER</span></h1>
         <p>Indulge your senses with the beauty and fragrance of
             our fresh flower shop. From classic roses to exotic
             blooms, we offer a wide variety of fresh flowers that
-            are perfect for any occasion. 
+            are perfect for any occasion. </p>
         </div>
-        </p>
-        <img src="/assets/hero-flower.png">
+        <img class="banner-img" src="/assets/hero-flower.png">
     </div>  
-    <section>
+    <section><div class="plants">
         <h1><span>Our</span> Plants</h1>
         <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From
-            classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            classic roses to exotic blooms, we offer a wide variety of fresh.</p></div>
         <div class="card">
             <div class="items">
             <img src="/assets/sample-flower-image.png">
