css optimized till card section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                 <li>Home</li>
                 <li>Shop</li>
                 <li>About Us</li>
-                <li> <img class="cart" src="assets/cart.png">Cart($56)</li>
+                <li><div class="cart"> <img class="cart" src="assets/cart.png"></li>
+                    <li>Cart($56)</div></li>
+                </div>
             </ul>
         </nav>
     </header>
@@ -31,7 +33,7 @@
     </div>  
     <section><div class="plants">
         <h1><span>Our</span> Plants</h1>
-        <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From
+        <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From<br>
             classic roses to exotic blooms, we offer a wide variety of fresh.</p></div>
         <div class="card">
             <div class="items">
