plant section css correction

--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
             <img src="/assets/flower-store.png">
         </div>
         <div class="flwr-plnt-text">
-            <h1>Flower & Plants Lover</h1>
+            <h1>Flower & Plants <br>Lover</h1>
             <ul>
-                <li>Indulge your senses with the beauty and
-                    fragrance of our fresh flower shop. From classic
-                    roses to exotic blooms, we offer a wide variety
+                <li>Indulge your senses with the beauty and<br>
+                    fragrance of our fresh flower shop. From classic<br>
+                    roses to exotic blooms, we offer a wide variety<br>
                     of fresh.</li>
-                <li>Indulge your senses with the beauty and
-                    fragrance of our fresh flower shop. From classic
-                    roses to exotic blooms, we offer a wide variety
+                <li>Indulge your senses with the beauty and<br>
+                    fragrance of our fresh flower shop. From classic<br>
+                    roses to exotic blooms, we offer a wide variety<br>
                     of fresh.</li>
-                <li>Indulge your senses with the beauty and
-                    fragrance of our fresh flower shop. From classic
-                    roses to exotic blooms, we offer a wide variety
+                <li>Indulge your senses with the beauty and<br>
+                    fragrance of our fresh flower shop. From classic<br>
+                    roses to exotic blooms, we offer a wide variety<br>
                     of fresh.</li>   
             </ul>
         </div>
