--- a/index.html
+++ b/index.html
@@ -110,23 +110,23 @@
     </section>
     <section>
         <div class="latest-deals">
-            <h1><span>Latest</span>Deals</h1>
-            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From
+            <h1><span>Latest </span>Deals</h1>
+            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From<br>
                 classic roses to exotic blooms, we offer a wide variety of fresh</p>
         </div>
         <div class="deals">
-            <div class="2-deals">
-                <div>
+            <div class="two-deals">
+                <div class="bloom">
                     <h5>60% Off | Bloom Plant</h5>
                     <p><u>shop now</u></p>
                 </div>
-                <div>
+                <div class="ana">
                     <h5>30% Off | Ana Plant</h5>
                     <p><u>shop now</u></p>
                 </div>
             </div>
             <div>
-                 <div class="1-deals">
+                 <div class="one-deal">
                 <h5>25% Off | Zabo Plant</h5>
                 <p><u>shop now</u></p>
                 </div>
