join section css update

--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
             </div>
         </div>
     </section>
-    <section class="join">
+    <section class="join"><div>
         <h1>Join the colorful Bunch </h1>
-        <input type="email" placeholder="Write email">
-        <button class="subs-btn">Subscribe</button>
+        <input type="email" class="mail" placeholder="   Write email">
+        <button class="subs-btn">Subscribe</button></div>
     </section>
     <section class="footer">
         <div>
