footer css update

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
         <button class="subs-btn">Subscribe</button></div>
     </section>
     <section class="footer">
-        <div>
+        <div class="f1">
             <img src="/assets/logo.png" alt="">
-            <p>Indulge your senses with the
-                beauty and fragrance of our fresh
+            <p>Indulge your senses with the<br>
+                beauty and fragrance of our fresh<br>
                 flower shop. </p>
         </div>
-        <div>
+        <div class="f-text">
             <ul>
                 <li>Home</li>
                 <li>About us</li>
@@ -154,7 +154,7 @@
                 <li>Contact Us</li>
             </ul>
         </div>
-        <div>
+        <div class="f-text">
             <ul>
                 <li>Features</li>
                 <li>Pricing</li>
@@ -163,8 +163,8 @@
                 <li>Help Center</li>
             </ul>
         </div>
-        <div>
-            <img src="assets/icon-facebook.png" alt="">
+        <div class="icon">
+            <img src="assets/icon-linkedin.png" alt="">
             <img src="assets/icon-twitter.png" alt="">
             <img src="assets/icon-facebook.png" alt="">
             <img src="assets/icon-youtube.png" alt="">
