--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <img class="banner-img" src="/assets/hero-flower.png">
     </div>  
-    <section><div class="plants">
+    <section class="o_plants"><div class="plants">
         <h1><span>Our</span> Plants</h1>
         <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From<br>
             classic roses to exotic blooms, we offer a wide variety of fresh.</p></div>
@@ -86,6 +86,7 @@
             </div>
         </div>
     </section>
+    <div class="badge"><img src="assets/trusted-badge.png"></div>
     <section class="flwr-plnt">
         <div class="flwr-plnt-img">
             <img src="/assets/flower-store.png">
