desktop html css update

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <div><img src="assets/logo.png"></div>
@@ -14,8 +16,11 @@
                 <li>Home</li>
                 <li>Shop</li>
                 <li>About Us</li>
-                <li><div class="cart"> <img class="cart" src="assets/cart.png"></li>
-                    <li>Cart($56)</div></li>
+                <li>
+                    <div class="cart"> <img class="cart" src="assets/cart.png">
+                </li>
+                <li>Cart($56)</div>
+                </li>
                 </div>
             </ul>
         </nav>
@@ -23,66 +28,68 @@
 
     <div class="banner">
         <div>
-        <h1>ALWAYS <span>FRESH <br>FLOWER</span></h1>
-        <p>Indulge your senses with the beauty and fragrance of
-            our fresh flower shop. From classic roses to exotic
-            blooms, we offer a wide variety of fresh flowers that
-            are perfect for any occasion. </p>
+            <h1>ALWAYS <span>FRESH <br>FLOWER</span></h1>
+            <p>Indulge your senses with the beauty and fragrance of
+                our fresh flower shop. From classic roses to exotic
+                blooms, we offer a wide variety of fresh flowers that
+                are perfect for any occasion. </p>
         </div>
         <img class="banner-img" src="/assets/hero-flower.png">
-    </div>  
-    <section class="o_plants"><div class="plants">
-        <h1><span>Our</span> Plants</h1>
-        <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From<br>
-            classic roses to exotic blooms, we offer a wide variety of fresh.</p></div>
+    </div>
+    <section class="o_plants">
+        <div class="plants">
+            <h1><span>Our</span> Plants</h1>
+            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From<br>
+                classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        </div>
         <div class="card">
             <div class="items">
-            <img src="/assets/sample-flower-image.png">
-            <p>Lily Blossom</p>
-            <p><strong>20 USD</strong></p>
-            <button class="cart-btn">ADD TO CART</button>
+                <img src="/assets/sample-flower-image.png">
+                <p>Lily Blossom</p>
+                <p><strong>20 USD</strong></p>
+                <button class="cart-btn">ADD TO CART</button>
             </div>
             <div class="items">
-            <img src="/assets/sample-flower-image.png">
-            <p>Lily Blossom</p>
-            <p><strong>20 USD</strong></p>
-            <button class="cart-btn">ADD TO CART</button>
+                <img src="/assets/sample-flower-image.png">
+                <p>Lily Blossom</p>
+                <p><strong>20 USD</strong></p>
+                <button class="cart-btn">ADD TO CART</button>
             </div>
             <div class="items">
-            <img src="/assets/sample-flower-image.png">
-            <p>Lily Blossom</p>
-            <p><strong>20 USD</strong></p>
-            <button class="cart-btn">ADD TO CART</button>
+                <img src="/assets/sample-flower-image.png">
+                <p>Lily Blossom</p>
+                <p><strong>20 USD</strong></p>
+                <button class="cart-btn">ADD TO CART</button>
             </div>
             <div class="items">
-            <img src="/assets/sample-flower-image.png">
-            <p>Lily Blossom</p>
-            <p><strong>20 USD</strong></p>
-            <button class="cart-btn">ADD TO CART</button>
+                <img src="/assets/sample-flower-image.png">
+                <p>Lily Blossom</p>
+                <p><strong>20 USD</strong></p>
+                <button class="cart-btn">ADD TO CART</button>
             </div>
             <div class="items">
-            <img src="/assets/sample-flower-image.png">
-            <p>Lily Blossom</p>
-            <p><strong>20 USD</strong></p>
-            <button class="cart-btn">ADD TO CART</button>
+                <img src="/assets/sample-flower-image.png">
+                <p>Lily Blossom</p>
+                <p><strong>20 USD</strong></p>
+                <button class="cart-btn">ADD TO CART</button>
             </div>
             <div class="items">
-            <img src="/assets/sample-flower-image.png">
-            <p>Lily Blossom</p>
-            <p><strong>20 USD</strong></p>
-            <button class="cart-btn">ADD TO CART</button>
+                <img src="/assets/sample-flower-image.png">
+                <p>Lily Blossom</p>
+                <p><strong>20 USD</strong></p>
+                <button class="cart-btn">ADD TO CART</button>
             </div>
             <div class="items">
-            <img src="/assets/sample-flower-image.png">
-            <p>Lily Blossom</p>
-            <p><strong>20 USD</strong></p>
-            <button class="cart-btn">ADD TO CART</button>
+                <img src="/assets/sample-flower-image.png">
+                <p>Lily Blossom</p>
+                <p><strong>20 USD</strong></p>
+                <button class="cart-btn">ADD TO CART</button>
             </div>
             <div class="items">
-            <img src="/assets/sample-flower-image.png">
-            <p>Lily Blossom</p>
-            <p><strong>20 USD</strong></p>
-            <button class="cart-btn">ADD TO CART</button>
+                <img src="/assets/sample-flower-image.png">
+                <p>Lily Blossom</p>
+                <p><strong>20 USD</strong></p>
+                <button class="cart-btn">ADD TO CART</button>
             </div>
         </div>
     </section>
@@ -105,7 +112,7 @@
                 <li>Indulge your senses with the beauty and<br>
                     fragrance of our fresh flower shop. From classic<br>
                     roses to exotic blooms, we offer a wide variety<br>
-                    of fresh.</li>   
+                    of fresh.</li>
             </ul>
         </div>
     </section>
@@ -127,17 +134,19 @@
                 </div>
             </div>
             <div>
-                 <div class="one-deal">
-                <h5>25% Off | Zabo Plant</h5>
-                <p><u>shop now</u></p>
+                <div class="one-deal">
+                    <h5>25% Off | Zabo Plant</h5>
+                    <p><u>shop now</u></p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="join"><div>
-        <h1>Join the colorful Bunch </h1>
-        <input type="email" class="mail" placeholder="   Write email">
-        <button class="subs-btn">Subscribe</button></div>
+    <section class="join">
+        <div>
+            <h1>Join the colorful Bunch </h1>
+            <input type="email" class="mail" placeholder="   Write email">
+            <button class="subs-btn">Subscribe</button>
+        </div>
     </section>
     <section class="footer">
         <div class="f1">
@@ -173,4 +182,5 @@
     </section>
 
 </body>
+
 </html>
