navbar hide responsive

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
                 <li>Home</li>
                 <li>Shop</li>
                 <li>About Us</li>
-                <li>
-                    <div class="cart"> <img class="cart" src="assets/cart.png">
-                </li>
-                <li>Cart($56)</div>
-                </li>
-                </div>
+                <p>
+                <div class="cart"> <img class="cart" src="assets/cart.png">
+                </p>
+                <p>Cart($56)</div>
+                </p>
             </ul>
         </nav>
     </header>
