responsive testing and updating

--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
                 <li>Home</li>
                 <li>Shop</li>
                 <li>About Us</li>
-                <p>
-                <div class="cart"> <img class="cart" src="assets/cart.png">
-                </p>
-                <p>Cart($56)</div>
-                </p>
+                <div class="cart-div"> 
+                <img class="cart" src="assets/cart.png">
+                <p>Cart($56)</p>
+                </div>
             </ul>
         </nav>
     </header>
 
     <div class="banner">
-        <div>
+        <div class="banner-text">
             <h1>ALWAYS <span>FRESH <br>FLOWER</span></h1>
             <p>Indulge your senses with the beauty and fragrance of
                 our fresh flower shop. From classic roses to exotic
