--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 blooms, we offer a wide variety of fresh flowers that
                 are perfect for any occasion. </p>
         </div>
-        <img class="banner-img" src="/assets/hero-flower.png">
+        <img class="banner-img" src="assets/hero-flower.png">
     </div>
     <section class="o_plants">
         <div class="plants">
@@ -42,49 +42,49 @@
         </div>
         <div class="card">
             <div class="items">
-                <img src="/assets/sample-flower-image.png">
+                <img src="assets/sample-flower-image.png">
                 <p>Lily Blossom</p>
                 <p><strong>20 USD</strong></p>
                 <button class="cart-btn">ADD TO CART</button>
             </div>
             <div class="items">
-                <img src="/assets/sample-flower-image.png">
+                <img src="assets/sample-flower-image.png">
                 <p>Lily Blossom</p>
                 <p><strong>20 USD</strong></p>
                 <button class="cart-btn">ADD TO CART</button>
             </div>
             <div class="items">
-                <img src="/assets/sample-flower-image.png">
+                <img src="assets/sample-flower-image.png">
                 <p>Lily Blossom</p>
                 <p><strong>20 USD</strong></p>
                 <button class="cart-btn">ADD TO CART</button>
             </div>
             <div class="items">
-                <img src="/assets/sample-flower-image.png">
+                <img src="assets/sample-flower-image.png">
                 <p>Lily Blossom</p>
                 <p><strong>20 USD</strong></p>
                 <button class="cart-btn">ADD TO CART</button>
             </div>
             <div class="items">
-                <img src="/assets/sample-flower-image.png">
+                <img src="assets/sample-flower-image.png">
                 <p>Lily Blossom</p>
                 <p><strong>20 USD</strong></p>
                 <button class="cart-btn">ADD TO CART</button>
             </div>
             <div class="items">
-                <img src="/assets/sample-flower-image.png">
+                <img src="assets/sample-flower-image.png">
                 <p>Lily Blossom</p>
                 <p><strong>20 USD</strong></p>
                 <button class="cart-btn">ADD TO CART</button>
             </div>
             <div class="items">
-                <img src="/assets/sample-flower-image.png">
+                <img src="assets/sample-flower-image.png">
                 <p>Lily Blossom</p>
                 <p><strong>20 USD</strong></p>
                 <button class="cart-btn">ADD TO CART</button>
             </div>
             <div class="items">
-                <img src="/assets/sample-flower-image.png">
+                <img src="assets/sample-flower-image.png">
                 <p>Lily Blossom</p>
                 <p><strong>20 USD</strong></p>
                 <button class="cart-btn">ADD TO CART</button>
@@ -94,7 +94,7 @@
     <div class="badge"><img src="assets/trusted-badge.png"></div>
     <section class="flwr-plnt">
         <div class="flwr-plnt-img">
-            <img src="/assets/flower-store.png">
+            <img src="assets/flower-store.png">
         </div>
         <div class="flwr-plnt-text">
             <h1>Flower & Plants <br>Lover</h1>
@@ -148,7 +148,7 @@
     </section>
     <section class="footer">
         <div class="f1">
-            <img src="/assets/logo.png" alt="">
+            <img src="assets/logo.png" alt="">
             <p>Indulge your senses with the<br>
                 beauty and fragrance of our fresh<br>
                 flower shop. </p>
